--- a/app.properties
+++ b/app.properties
@@ -6,11 +6,11 @@ team.name = 'Team Name'
 team.project = 'Phonie'
 
 # AltSchool name and email of the team lead/rep 
-lead.email = 'lol@gmail.com'
-lead.name = 'Lastname Firstname'
+lead.email = 'anobtakon@gmail.com'
+lead.name = 'Takon Anob-Ejah'
 
 # AltSchool name and email of the team members
 # names and emails are separated by | character and must follow the same sequence
 # e.g email-1 (the first email) should be the email for the person whose name comes first in the list of names
-members.emails = 'email-1 | email-2 | email-3'
-members.names = 'Lastname Firstname | Lastname Firstname | Lastname Firstname'
+members.emails = 'rambabest@gmail.com | sason.ocran@gmail.com | amjustabaham@gmail.com chigozieakpa1@gmail.com'
+members.names = 'Ambali Rahman | Ocran Samson | Apedo Abraham | Chigozie Akpa'
