Worked on the autocomplete.

--- a/app.properties
+++ b/app.properties
@@ -13,4 +13,4 @@ lead.name = 'Takon Anob-Ejah'
 # names and emails are separated by | character and must follow the same sequence
 # e.g email-1 (the first email) should be the email for the person whose name comes first in the list of names
 members.emails = 'rambabest@gmail.com | sason.ocran@gmail.com | amjustabaham@gmail.com chigozieakpa1@gmail.com'
-members.names = 'Ambali Rahman | Ocran Samson | Apedo Abraham | Chigozie Akpa'
+members.names = 'Ambali Rahman | Ocran Samson | Apedo Abraham | Chigozie Akpa | chigozieakpa@gail.com | Deborah Adebayo| morayojesu@gmail.com'
