--- a/app.properties
+++ b/app.properties
@@ -12,5 +12,5 @@ lead.name = 'Takon Anob-Ejah'
 # AltSchool name and email of the team members
 # names and emails are separated by | character and must follow the same sequence
 # e.g email-1 (the first email) should be the email for the person whose name comes first in the list of names
-members.emails = 'rambabest@gmail.com | sason.ocran@gmail.com | amjustabaham@gmail.com chigozieakpa1@gmail.com'
-members.names = 'Ambali Rahman | Ocran Samson | Apedo Abraham | Chigozie Akpa | chigozieakpa@gail.com | Deborah Adebayo| morayojesu@gmail.com'
+members.emails = 'rambabest@gmail.com | samson.ocran@gmail.com | amjustabaham@gmail.com|chigozieakpa@gail.com| morayojesu@gmail.com| matthewchukwu@gmail.com | oloyedeopeyemi253@gmail.com'
+members.names = 'Ambali Rahman | Ocran Samson | Apedo Abraham | Chigozie Akpa | Deborah Adebayo| Matthew Ekeanyanwu | Oloyede Opeyemi'
